--- a/src/Curba/WeatherBundle/Resources/views/Default/edit.html.twig
+++ b/src/Curba/WeatherBundle/Resources/views/Default/edit.html.twig
@@ -5,6 +5,7 @@
 
     <form action="{{ path('station_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         {{ form_widget(edit_form) }}
+        <p>NOTE: The rain correction is a multiplier the other corrections add a value</p>
         <p>
             <button type="submit">Edit</button>
         </p>
