--- a/src/Curba/WeatherBundle/Resources/views/Default/chart.html.twig
+++ b/src/Curba/WeatherBundle/Resources/views/Default/chart.html.twig
@@ -23,6 +23,7 @@
     <button type="submit">Change</button>
 </form>
 
+<h2>{% trans %}weather.graphic.title{% endtrans %}{{ year }}</h2>
 <div id="container" style="height: 500px"></div>
 {% endblock %}
 
