--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,7 +20,11 @@
     #silverlightControlHost {
 	    height: 100%;
     }
-    </style>       
+    </style>      
+    
+    {% block head_javascripts %}{% endblock %}
+    
+    {#
     <script type="text/javascript">
         function onSilverlightError(sender, args) {
         
@@ -56,8 +60,13 @@
             throw new Error(errMsg);
         }
     </script>
+    #}
 
     </head>
+    
+    
+    
+    
     <body id="{% block pageid '' %}">
         <header>
             <div class="container_16">
