--- a/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
@@ -13,7 +13,7 @@
     <ul>
       {% for garden in gardens %}
         <li>Garden {{ garden.name }} 
-            <a href="{{ path('garden_silverlight', { 'id': garden.id }) }}">start to work</a> |
+            <a href="{{ path('garden_editor', { 'id': garden.id }) }}">start to work</a> |
             <a href="{{ path('garden_index', { 'id': garden.id }) }}">information</a> | 
             <a href="{{ path('garden_history', { 'id': garden.id }) }}">history</a> | 
             <a href="{{ path('garden_edit', { 'id': garden.id }) }}">modify</a> |
@@ -32,6 +32,7 @@
               {% endfor %}
               <li><a href="{{ path('station_new', { 'id': garden.id }) }}">Create a new station</a></li>
             </ul>
+            <a href="{{ path('garden_silverlight', { 'id': garden.id }) }}">old editor</a>
         </li>
       {% endfor %}
       <li><a href="{{ path('garden_new') }}">Create a new garden</a></li>
