--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>{% block title %}Gardening{% endblock %}</title>
+        <title>{% block title %}Gardening Alfa 2{% endblock %}</title>
         <meta name="description" content="{% block metadesc %}The gardening web site. Build, plan and enjoy your garden.{% endblock %}" />
 
         {% block stylesheets %}{% endblock %}
