Added showPlantInfo page to see a detailed plant info

--- a/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
@@ -51,5 +51,6 @@
 {% endblock %}
 
 {% block body_footer %}
-
+    <br/>
+    <a href="{{ path('show_plant_info', { 'id': 1 }) }}">Plant 1</a>
 {% endblock %}
